tests/baselines/reference/parserParameterList7.errors.txt
==== tests/cases/compiler/parserParameterList7.ts (2 errors) ====
    class C1 {
     constructor(public p1:string); // ERROR
                 ~~~~~~
!!! parserParameterList7.ts(2,14): error TS2246: A parameter property is only allowed in a constructor implementation.
     constructor(private p2:number); // ERROR
                 ~~~~~~~
!!! parserParameterList7.ts(3,14): error TS2246: A parameter property is only allowed in a constructor implementation.
     constructor(public p3:any) {} // OK
    }